Initialize impl_window for foreign W32 windows

https://bugzilla.gnome.org/show_bug.cgi?id=736269